# graph-diameter

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  README.md  meson.build  meson_options.txt
include/: bfs.h  cut-points.h  full_diameter.h  graph.h  nde.h  smart_diameter.h
src/: graph-diameter.cc  nde.cc
src/tools/: prepare-graph.cc  to-dot.cc
subprojects/: cxxopts.wrap
tests/: helpers.h  meson.build  test_bfs.cc  test_cut_points.cc  test_full_diameter.cc  test_graph.cc  test_nde.cc  test_smart_diameter.cc
